pages/dsns.dev/index.css
h1 {
	font-size: 90px;
	color: #000;
	font-weight: bold;
	line-height: 64px;
	margin-left: -5px;
}

h2 {
	font-size: 30px;
	color: #000;
	margin-top: 30px;
	line-height: 40px;
}

.image img {
	width: auto;
	height: auto;
}

a {
	text-decoration: none !important;
}

#minecraftAvatar {
	margin-left: 11vw;
	margin-top: -11vh;
}

.mt-8 {
	margin-top: 8rem !important;
}

.bounce {
	position: relative;
	animation: bounce 3s ease-in-out;
	animation-iteration-count: infinite;
}

@keyframes bounce {
	0% {
		transform: translateY(0%);
	}
	50% {
		transform: translateY(-50%);
	}
	100% {
		transform: translateY(0%);
	}
}

.card {
	box-shadow: 8px 14px 38px rgba(39, 44, 49, 0.06), 1px 3px 8px rgba(39, 44, 49, 0.03);
	transition: all 0.5s ease;
}

.card:hover {
	box-shadow: 8px 28px 50px rgba(39, 44, 49, 0.07), 1px 6px 12px rgba(39, 44, 49, 0.04);
	transition: all 0.4s ease;
	transform: translate3D(0, -1px, 0) scale(1.03);
}

.skillsList h2 {
	text-align: center;
	font-weight: bold;
	color: black;
}

@media (max-width: 850px) {
	.skillsList h2 {
		font-size: 16px;
	}
	.is-one-third-mobile {
		width: 33.3333% !important;
	}
}

@media (max-width: 950px) {
	.skillsList h2 {
		font-size: 22px;
	}
	.oversizedText {
		font-size: 18px !important;
	}
}

@media (max-width: 1200px) {
	.oversizedText {
		font-size: 2vw;
	}
}

.icons {
	transform: scale(0.5);
	transform-origin: 0 0;
}

.icons div {
	margin-right: 141px;
}

.icons div:last-child {
	margin-right: 0px;
}

@media (max-width: 750px) {
	.icons div {
		margin-right: 50px !important;
	}
	.icons {
		transform: scale(0.55);
	}
	#experiences {
		font-size: 15vw;
	}
	#discordIcon {
		transform: scale(1.2) !important;
	}
}

@media (max-width: 550px) {
	.icons div {
		margin-right: 15px !important;
	}
	.icons {
		transform: scale(1) !important;
	}
	#discordIcon {
		transform: scale(1.6) !important;
	}
}

